# pango

./: .cvsignore  .cvsusers  .gitignore  .gitlab-ci.yml  AUTHORS  CODING_STYLE.md  ChangeLog  ChangeLog.pre-1-0  ChangeLog.pre-1-10  ChangeLog.pre-1-2  ChangeLog.pre-1-4  ChangeLog.pre-1-6  ChangeLog.pre-1-8  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  README.win32  README.win32.md  TODO  TODO.xml  acconfig.h  acinclude.m4  autogen.sh  config.h.win32  config.h.win32.in  configure.ac  configure.in  git.mk  lsan.supp  make-release.sh  meson.build  meson.options  meson_options.txt  pango-config.in  pango-uninstalled.pc.in  pango-zip.sh.in  pango.doap  (+13 more)
docs/: .cvsignore  Makefile.am  check.docs  first_steps.md  meson.build  migrating.md  pango-docs.sgml  pango-list.rst  pango-querymodules.1  pango-querymodules.xml  pango-sections.txt  pango-segmentation.rst  pango-view.rst  pango.toml  pango.toml.in  pango.types  pango.types.in  pango_bidi.md  pango_cairo.md  pango_fonts.md  pango_layout.md  pango_markup.md  pango_markup.sgml  pango_rendering.md  pango_user.md  pango_xft.md  pangocairo.toml  pangocairo.toml.in  pangofc.toml  pangofc.toml.in  pangoft2.toml  pangoft2.toml.in  pangoot.toml  pangoot.toml.in  pangoxft.toml  pangoxft.toml.in  tools.md  urlmap.js
docs/TEXT/: coding-style  glossary  ligatures  modules  questions  western-design
docs/tmpl/: .cvsignore  atsui-fonts.sgml  bidi.sgml  coretext-fonts.sgml  coverage-maps.sgml  engines.sgml  fonts.sgml  freetype-fonts.sgml  glyphs.sgml  layout.sgml  main.sgml  modules.sgml  opentype.sgml  pango-engine-lang.sgml  pango-engine-shape.sgml  pango-indic.sgml  pango-renderer.sgml  pango-unused.sgml  pango-version.sgml  pango-x.sgml  pangocairo.sgml  pangofc-decoder.sgml  pangofc-font.sgml  pangofc-fontmap.sgml  scripts.sgml  tab-stops.sgml  text-attributes.sgml  utils.sgml  vertical.sgml  win32-fonts.sgml  x-fonts.sgml  x-rendering.sgml  xft-fonts.sgml
docs/xml/: meson.build
examples/: .cvsignore  GLASS.utf8  HELLO.utf8  Makefile.am  argcontext.c  argcontext.h  cairoshape.c  cairosimple.c  cairotwisted.c  cairoview.c  columns.c  first-steps.c  lorem-ipsum-hebrew.txt  lorem-ipsum.txt  makefile.mingw  makefile.mingw.in  makefile.msc  meson.build  muru.utf  optical-margins.c  pango.modules  pangoft2.aliases  pangoft2topgm.c  pangorc  pangowin32.aliases  pangowin32tobmp.c  pangox.aliases  pangox_aliases  parshape.c  renderdemo.c  renderdemo.h  test-thai.txt  userfont.c  viewer-cairo.c  viewer-ft2.c  viewer-main.c  viewer-pangocairo.c  viewer-pangoft2.c  viewer-pangox.c  viewer-pangoxft.c  (+8 more)
modules/: .cvsignore  Makefile.am  Module.mk  engine.def  makefile.msc  pangorc
modules/arabic/: Makefile.am  arabic-fc.c  arabic-ft2.c  arabic-lang.c  arabic-ot.c  arabic-ot.h  arabic-x.c  arabic-xft.c  arabic.c  arconv.c  arconv.h  langboxfont.c  langboxfont.h  mulefont.c  mulefont.h  naqshfont.c  naqshfont.h
modules/basic/: .cvsignore  Makefile.am  basic-atsui.c  basic-common.h  basic-coretext.c  basic-fc.c  basic-ft2.c  basic-win32.c  basic-x.c  basic-xft.c  basic.c  makefile.mingw  makefile.mingw.in  tables-big.i  tables-small.i
modules/devanagari/: Makefile.am  dev-ligatures.h  devanagari.c
modules/hangul/: Makefile.am  hangul-defs.h  hangul-fc.c  hangul-x.c  hangul-xft.c  hangul.c  tables-jamos.i  tables-johabfont.i  tables-ksc5601.i
modules/hebrew/: Makefile.am  hebrew-fc.c  hebrew-ft2.c  hebrew-shaper.c  hebrew-shaper.h  hebrew-x.c  hebrew-xft.c
modules/indic/: Makefile.am  bengali-x.c  devanagari-x.c  (+17 more)
pango/: .cvsignore  Makefile.am  break-arabic.c  break-indic.c  break-latin.c  break-thai.c  break.c  check.defs  dwrite_c.h  ellipsize.c  emoji_presentation_scanner.c  emoji_presentation_scanner.rl  fonts.c  glyphstring.c  gunicode.h  itemize.c  makeenums.pl  makefile.mingw  makefile.mingw.in  makefile.msc  mapping.c  meson.build  module-defs-fc.c.win32  module-defs-ft2.c.win32  module-defs-win32.c.win32  module-defs.c.win32  module-defs.h.win32  modules.c  modules.h  pango-attr-iterator-private.h  pango-attr-iterator.c  pango-attr-iterator.h  pango-attr-list-private.h  pango-attr-list.c  pango-attr-list.h  pango-attr-private.h  pango-attr.c  pango-attr.h  pango-attributes-private.h  pango-attributes.c  (+258 more)
pango-view/: EMOJI-MODIFIERS.txt  Makefile.am  meson.build  pango-view.c  pangocairo-view.c  pangoft2-view.c  renderdemo.c  renderdemo.h  test-feature-tag.markup  test-font-variations.markup  test-long-paragraph.txt  test-mixed.markup  test-mixed.txt  viewer-cairo.c  viewer-cairo.h  viewer-main.c  viewer-pangocairo.c  viewer-pangoft2.c  viewer-pangox.c  viewer-pangoxft.c  viewer-render.c  viewer-render.h  viewer-win32.c  viewer-x.c  viewer-x.h  viewer.h
tests/: .cvsignore  CharBreakTest.txt  EmojiBreakTest.txt  GraphemeBreakTest.txt  Makefile.am  all-unicode.txt  boundaries.utf8  cxx-test.C  cxx-test.cpp  dump-boundaries.c  gen-all-unicode.c  gen-all-unicode.py  gen-installed-test.py  layout-performance.c  markup-parse.c  meson.build  pangorc  runtests.sh  runtests.sh.in  test-bidi.c  test-break.c  test-common.c  test-common.h  test-coverage.c  test-ellipsize.c  test-font-data.c  test-font.c  test-fonts.c  test-fontsets.c  test-harfbuzz.c  test-itemize.c  test-layout.c  test-layout2.c  test-no-fonts.c  test-ot-tags.c  test-pangocairo-threads.c  test-shape.c  testattributes.c  testboundaries.c  testboundaries_ucd.c  (+14 more)
tools/: .cvsignore  Makefile.am  add-copyright  compress-table.pl  gen-break-table.py  gen-easy-scripts-table.c  gen-emoji-table.py  gen-script-for-lang-new.c  gen-script-for-lang.c  gen-script-table.pl  gen-vertical-orientation-U-table.py  make-table.sh  meson.build  rgb.txt
utils/: Makefile.am  meson.build  pango-list.c  pango-segmentation.c  pango-view.c  test-arabic.txt  test-chinese.txt  test-color-run.markup  test-hyphens.txt  test-mongolian.txt  userfont.c  userfont.h  viewer-cairo.c  viewer-cairo.h  viewer-cocoa.gresource.xml  viewer-cocoa.h  viewer-cocoa.m  viewer-main.c  viewer-pangocairo.c  viewer-pangoft2.c  viewer-pangoxft.c  viewer-render.c  viewer-render.h  viewer-x.c  viewer-x.h  viewer.h
(+699 files in other folders)
